# zentas

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md
cmake/: EnableCompilerWarnings.cmake  FindCython.cmake
data/: ACTG_costs.txt  costs.txt  nucleic.txt  words1.txt  words2.txt
include/: CMakeLists.txt  baseclarans.hpp  baseclaransl23.hpp  baseclusterer.hpp  claransl0.hpp  claransl1.hpp  claransl2.hpp  claransl3.hpp  fasta.hpp  tdata.hpp  tdatain.hpp  tenergyfunc.hpp  tmetric.hpp  tmetricdata.hpp  voronoil0.hpp  zentas.hpp
python/: CMakeLists.txt  clarans_vik_experiments.py  clarans_vik_experiments_plotting.py  devtest.py  examples.py  genome_cutter.py  goudurix12paths.py  hardpaths.py  initialisation_experiments.py  levenshtein_prototyping.py  load_joensuu_data.py  mnist.py  pyzentas.pyx
python/devcode/: levenshtein_prototyping.py
python/experiments/: afkmc2_init_experi.py  clarans_demo_slides.py  clarans_vik_experiments.py  clarans_vik_experiments_plotting.py  datapaths.py  experiments.py  experiments1.py  experiments_icml.py  genome_cutter.py  grid_data.py  hardpaths.py  initialisation_experiments.py  joensuu.py  levels.py  load_csv.py  load_joensuu_data.py  mnist.py  rna.py  scaling_in_k.py  skl_eak_zen.py
src/: CMakeLists.txt  main.cpp
src/zentas/: CMakeLists.txt  fasta.cpp  tdatain.cpp  textfilezentas.cpp  zentas.cpp
testsexamples/: CMakeLists.txt  exdense.cpp  exsparse.cpp  exvdimap.cpp  exwords.cpp  main.cpp
zentas/: CMakeLists.txt
zentas/include/: CMakeLists.txt  baseclarans.hpp  baseclaransl23.hpp  baseclusterer.hpp  claransextrasbundle.hpp  claransl0.hpp  claransl1.hpp  claransl2.hpp  claransl3.hpp  costs.hpp  dispatch.hpp  energyinit.hpp  extrasbundle.hpp  fasta.hpp  initialisation.hpp  levenshtein.hpp  lpmetric.hpp  outputwriter.hpp  refinement.hpp  skeletonclusterer.hpp  sparsevectorrfcenter.hpp  stringutilbase.hpp  tdata.hpp  tdatain.hpp  tenergyfunc.hpp  tmetric.hpp  tmetricdata.hpp  vdimap.hpp  voronoil0.hpp  zentas.hpp  zentaserror.hpp  zentasinfo.hpp
zentas/include/zentas/: baseclarans.hpp  baseclaransl23.hpp  baseclusterer.hpp  claransextrasbundle.hpp  claransl0.hpp  claransl1.hpp  claransl2.hpp  claransl3.hpp  costs.hpp  dispatch.hpp  energyinit.hpp  extrasbundle.hpp  fasta.hpp  initialisation.hpp  levenshtein.hpp  lpmetric.hpp  outputwriter.hpp  skeletonclusterer.hpp  sparsevectorrfcenter.hpp  stringutilbase.hpp  tdata.hpp  tdatain.hpp  tenergyfunc.hpp  vdimap.hpp  voronoil0.hpp  zentas.hpp  zentaserror.hpp  zentasinfo.hpp
zentas/src/: CMakeLists.txt  baseclarans.cpp  basecluster.cpp  claransl0.cpp  costs.cpp  design.cpp  dispatch.cpp  energyinit.cpp  fasta.cpp  initialisation.cpp  levenshtein.cpp  lpmetric.cpp  lpmetric_vdense.cpp  lpmetric_vsparse.cpp  metric_vdense.cpp  metric_vsparse.cpp  oldyinyang.cpp  outputwriter.cpp  refinement.cpp  skeletonclusterer.cpp  stringutilbase.cpp  textfilezentas.cpp  tmetric.cpp  vdimap.cpp  voronoil0.cpp  zentas.cpp  zentaserror.cpp  zentasinfo.cpp
